Id's added for first two options

--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -1,8 +1,8 @@
 <html>
 <body>
   <select>
-    <option>Casual</option>
-    <option>Formal</option>
+    <option id="CasualOption">Casual</option>
+    <option id="FormalOption">Formal</option>
   </select>
 </body>
 </html>
