--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -1,13 +1,15 @@
-<html ng-app>
+<html ng-app="baseWebPageApp">
 <head>
   <script src="angular.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <script src="styleDropDownController.js"></script>
 </head>
-<body>
+<div ng-controller="styleDropDownController" id="styleDropdown">
   <select>
-    <option id="CasualOption">Casual</option>
-    <option id="FormalOption">Formal</option>
+    <option ng-repeat="style in styles">
+      <span>{{style.name}}</span>
+    </option>
   </select>
-</body>
+</div>
 </html>
