--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -3,26 +3,29 @@
   <script src="angular.min.js"></script>
   <link rel="stylesheet" type="text/css" href="design_classes.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="sidebarController.js"></script>
   <script src="styleController.js"></script>
   <script src="shirtController.js"></script>
+  <script src="mainPageController.js"></script>
 </head>
 
-<div class="col-md-4" ng-controller="sidebarController" id="sideBar">
+<div class="row" ng-controller="sidebarController" id="sideBar">
   <ul ng-repeat="dropdown in dropdowns">
     <clickme>{{dropdown.name}}</clickme>
     <li hidden="true" id={{dropdown.name + Value}}>{{dropdown.value}}</li>
   </ul>
 </div>
 
-<div class="col-md-12">
-  <div ng-controller="styleController">
+<div class="row" ng-controller="mainPageController">
+  <div ng-controller="styleController" id="styleTab" class="col-md-10 collapse">
     <select>
       <option ng-repeat="style in styles">{{style.name}}</option>
     </select>
   </div>
+  <button data-toggle="collapse" data-target="#styleTab" class="col-md-2">Click This</button>
 
   <div ng-controller="shirtController">
   </div>
