added images folder

--- a/photos.html
+++ b/photos.html
@@ -2,36 +2,70 @@
 <body>
 
 <a href="https://www.abercrombie.com/shop/us/p/big-icon-v-neck-tee-8822144?seq=07&categoryId=6570709&ofp=true">
-  <img src="whiteT_VNeck.jpg">
+  <img src="images/whiteT_VNeck.jpg">
+  </a>
+<a href="https://www.abercrombie.com/shop/us/p/big-icon-v-neck-tee-8822144?seq=07&categoryId=6570709&ofp=true">
+  <p> A&F White T-Shirt V-Neck </p>
+</a>
+<br></br>
+
+<a href="https://www.abercrombie.com/shop/us/p/big-icon-crew-tee-8822143?seq=07&categoryId=6570709&ofp=true">
+  <img src="images/whiteT.jpg">
   </a>
 
 <a href="https://www.abercrombie.com/shop/us/p/big-icon-crew-tee-8822143?seq=07&categoryId=6570709&ofp=true">
-  <img src="whiteT.jpg">
-  </a>
+  <p> A&F White T-Shirt </p>
+</a>
+<br></br>
 
 <a href="https://www.abercrombie.com/shop/us/p/big-icon-stretch-polo-9847798?seq=04&categoryId=6570709&ofp=true">
-  <img src="stretchPolo.jpg">
-  </a>
+  <img src="images/stretchPolo.jpg">
+</a>
+
+<a href="https://www.abercrombie.com/shop/us/p/big-icon-stretch-polo-9847798?seq=04&categoryId=6570709&ofp=true">
+  <p>A&F Stretch Polo </p>
+</a>
+<br></br>
 
 <a href="https://www.abercrombie.com/shop/us/p/logo-crew-10124721?seq=01&categoryId=6570709&ofp=true">
-  <img src="LogoCrew.jpg">
+  <img src="images/LogoCrew.jpg">
   </a>
+<a href="https://www.abercrombie.com/shop/us/p/logo-crew-10124721?seq=01&categoryId=6570709&ofp=true">
+  <p>A&F Logo Crew </p>
+</a>
+<br></br>
 
 <a href="https://www.abercrombie.com/shop/us/p/garment-dye-icon-pocket-tee-9847728?seq=03&categoryId=6570709&ofp=true">
-  <img src="PocketT.jpg">
+  <img src="images/PocketT.jpg">
   </a>
+<a href="https://www.abercrombie.com/shop/us/p/garment-dye-icon-pocket-tee-9847728?seq=03&categoryId=6570709&ofp=true">
+  <p>A&F Garment Dye Icon Pocket Tee </p>
+</a>
+<br></br>
 
 <a href="https://www.abercrombie.com/webapp/wcs/stores/servlet/ProductDisplay?urlRequestType=Base&catalogId=10901&parentCategoryId=&categoryId=6570709&productId=10454921&topCategoryId=10000&langId=-1&ofp=true&storeId=10051&seq=03seq=03&categoryId=6570709&ofp=true">
-  <img src="collarSweater.jpg">
+  <img src="images/shawlCollarSweater.jpg">
   </a>
+<a href="https://www.abercrombie.com/webapp/wcs/stores/servlet/ProductDisplay?urlRequestType=Base&catalogId=10901&parentCategoryId=&categoryId=6570709&productId=10454921&topCategoryId=10000&langId=-1&ofp=true&storeId=10051&seq=03seq=03&categoryId=6570709&ofp=true">
+  <p>A&F Shawl Collar Sweater </p>
+</a>
+<br></br>
 
 <a href="https://www.abercrombie.com/shop/us/p/flannel-shirt-10264720?seq=02&categoryId=6570709&ofp=true">
-  <img src="flannel.jpg">
+  <img src="images/flannel.jpg">
   </a>
+<a href="https://www.abercrombie.com/shop/us/p/flannel-shirt-10264720?seq=02&categoryId=6570709&ofp=true">
+  <p>A&F Flannel Shirt</p>
+</a>
+<br></br>
 
 <a href="https://www.abercrombie.com/shop/us/p/crewneck-sweater-9825219?seq=03&categoryId=6570709&ofp=true">
-  <img src="crewneckSweater.jpg">
+  <img src="images/crewneckSweater.jpg">
   </a>
+<a href="https://www.abercrombie.com/shop/us/p/crewneck-sweater-9825219?seq=03&categoryId=6570709&ofp=true">
+  <p>A&F Crewneck Sweater</p>
+</a>
+<br></br>
 
 </body>
 </html>
