Moved Controllers to Folders.

--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="sidebarController.js"></script>
-  <script src="styleController.js"></script>
-  <script src="shirtController.js"></script>
-  <script src="mainPageController.js"></script>
+  <script src="Controllers/sidebarController.js"></script>
+  <script src="Controllers/styleController.js"></script>
+  <script src="Controllers/shirtController.js"></script>
+  <script src="Controllers/mainPageController.js"></script>
 </head>
 
 <div class="row" ng-controller="sidebarController" id="sideBar">
