--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -1,6 +1,6 @@
 <html ng-app="baseWebPageApp">
 <head>
-  <script src="angular.min.js"></script>
+  <script src="angularjs/angular.min.js"></script>
   <link rel="stylesheet" type="text/css" href="design_classes.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
