Added Dropdown functionaility to sidebar.

--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -14,20 +14,23 @@
 
 <div class="row" style="padding-left: 20px" ng-controller="sidebarController" id="sideBar">
   <ul ng-repeat="dropdown in dropdowns">
-    <clickme>{{dropdown.name}}</clickme>
-    <li hidden="true" id={{dropdown.name + Value}}>{{dropdown.value}}</li>
+    <clickme class="dropdown-toggle">{{dropdown.name}}</clickme>
+    <li class="dropdown-menu" hidden="true" id={{dropdown.name + Value}}>{{dropdown.value}}</li>
   </ul>
 </div>
 
-<div class="row" style="padding-left: 20px" ng-controller="mainPageController">
-  <i class="fa fa-caret-square-o-down" style="padding-left: 20px" aria-hidden="true" data-toggle="collapse" data-target="#styleTab"></i>
+<div class="row" style="margin-left: 45%" ng-controller="mainPageController">
+  <i class="fa fa-caret-square-o-down" style="" aria-hidden="true" data-toggle="collapse" data-target="#styleTab"></i>
   <div ng-controller="styleController" id="styleTab" class="collapse">
-    <select>
+    <select id="styleValue">
       <option ng-repeat="style in styles">{{style.name}}</option>
     </select>
   </div>
 
-  <div ng-controller="shirtController">
+  <div class="row" style="" ng-controller="shirtController">
+    <i class="fa fa-arrow-left fa-3 col-md-1" aria-hidden="true"></i>
+
+    <i class="fa fa-arrow-right fa-3 col-md-1" aria-hidden="true"></i>
   </div>
 </div>
 
