--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -14,8 +14,8 @@
 
 <div class="row" style="padding-left: 20px" ng-controller="sidebarController" id="sideBar">
   <ul ng-repeat="dropdown in dropdowns">
-    <clickme class="dropdown-toggle">{{dropdown.name}}</clickme>
-    <li class="dropdown-menu" hidden="true" id={{dropdown.name + Value}}>{{dropdown.value}}</li>
+    <clickme class="dropdown-toggle" ng-click="updateDropDown()">{{dropdown.name}}</clickme>
+    <li class="dropdown-menu" hidden="true">{{dropdown.value}}</li>
   </ul>
 </div>
 
