added website title

--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="design_classes.css">
 </head>
 
+<website_title>SD Hacks Project 2017</website_title>
 <div class="row" style="padding-left: 20px" ng-controller="sidebarController" id="sideBar">
   <ul ng-repeat="dropdown in dropdowns">
     <clickme class="dropdown-toggle" ng-click="updateDropDown()">{{dropdown.name}}</clickme>
