took out extra stuff in style page

--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -33,7 +33,7 @@
                 <img src="https://i.styleoholic.com/2016/02/trendy-spring-2016-casual-outfits-for-men-21.jpg" alt="Lights" style="width:100%">
               </a>
             </div>
-            <button type="button" class="btn btn-primary" data-toggle="dropdown" onclick='flag_casual=1' style="margin-left: 40%; margin-bottom: 10px;">Casual</button>
+            <button type="button" class="btn btn-primary" data-toggle="dropdown" style="margin-left: 40%; margin-bottom: 10px;">Casual</button>
           </div>
           <div class="col-md-4">
 
@@ -42,7 +42,7 @@
                 <img src="http://i.ebayimg.com/00/s/ODQ5WDU2Ng==/z/0tcAAOSwEK9UGYew/$_32.JPG?set_id=880000500F" alt="Nature" style="width:100%">
               </a>
             </div>
-            <button type="button" class="btn btn-primary" data-toggle="dropdown" onclick='flag_casual=1' style="margin-left: 40%; margin-bottom: 10px;">Formal</button>
+            <button type="button" class="btn btn-primary" data-toggle="dropdown" style="margin-left: 40%; margin-bottom: 10px;">Formal</button>
           </div>
         </div>
       </div>
