--- a/baseWebPage.html
+++ b/baseWebPage.html
@@ -18,41 +18,14 @@
 <div class="row">
   <div class="col-md-3" style="padding-left: 20px" ng-controller="sidebarController" id="sideBar">
     <ul>
-      <li><a href="/">Styles</a></li>
-      <li><a href="/shirts">Shirts</a></li>
-      <li><a href="">Pants</a></li>
+      <li><a href="#!">Styles</a></li>
+      <li><a href="#!shirts">Shirts</a></li>
+      <li><a href="#!">Pants</a></li>
     </ul>
   </div>
 
   <div class="col-md-6" style="margin-left: 0; margin-top: 2%" ng-controller="mainPageController">
     <div ng-view></div>
-    <div ng-controller="styleController" id="styleTab">
-      <div class="container">
-        <h2>Choose a Style:</h2>
-        <div class="row">
-          <div class="col-md-4">
-
-            <div class="thumbnail">
-                <img src="images/Casual.jpg" alt="Lights" style="width:100%">
-            </div>
-            <button type="button" class="btn btn-primary" data-toggle="dropdown" style="margin-left: 40%; margin-bottom: 10px;">Casual</button>
-          </div>
-          <div class="col-md-4">
-
-            <div class="thumbnail">
-                <img src="images/Formal.jpg" alt="Nature" style="width:100%">
-            </div>
-            <button type="button" class="btn btn-primary" data-toggle="dropdown" style="margin-left: 40%; margin-bottom: 10px;">Formal</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="" ng-controller="shirtController">
-      <i class="fa fa-arrow-left fa-3 col-md-1" aria-hidden="true"></i>
-
-      <i class="fa fa-arrow-right fa-3 col-md-1" aria-hidden="true"></i>
-    </div>
   </div>
 </div>
 
