--- a/stylePage.html
+++ b/stylePage.html
@@ -2,19 +2,21 @@
   <div class="container">
     <h2>Choose a Style:</h2>
     <div class="row">
-      <div class="col-md-4">
 
+      <div class="col-md-4">
         <div class="thumbnail">
             <img src="images/Casual.jpg" alt="Lights" style="width:100%">
         </div>
         <button type="button" class="btn btn-primary" data-toggle="dropdown" style="margin-left: 40%; margin-bottom: 10px;">Casual</button>
       </div>
-      <div class="col-md-4">
 
+      <div class="col-md-4">
         <div class="thumbnail">
             <img src="images/Formal.jpg" alt="Nature" style="width:100%">
         </div>
         <button type="button" class="btn btn-primary" data-toggle="dropdown" style="margin-left: 40%; margin-bottom: 10px;">Formal</button>
       </div>
+
     </div>
   </div>
+</div>
